--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-opencv-python-headless>=4.5.5  
-numpy>=1.21,<2               
-ultralytics>=8.0.0       
-cupy 
+ numpy>=1.21,<2               
+ultralytics>=8.0.0 
+opencv-python   
 pyserial
